# async-data-manager

./: CMakeLists.txt
app/: main.cpp
config/: Config.json
include/uni/application/: Application.hpp
src/uni/application/: Application.cpp  Application.hpp  Config.cpp  Config.hpp  DataGenerator.cpp  DataGenerator.hpp  DataGeneratorListener.hpp  DispatchQueue.cpp  DispatchQueue.hpp  Hasher.cpp  Hasher.hpp  HasherListener.hpp
